deployments/session-management.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-management-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: session-management
  template:
    metadata:
      labels:
        app: session-management
        version: v1
    spec:
      containers:
      - name: session-management
        image: adiselv/captivate.session-management:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3005
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-management-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: session-management
  template:
    metadata:
      labels:
        app: session-management
        version: v2
    spec:
      containers:
      - name: session-management
        image: adiselv/captivate.session-management:0.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 3005
