deployments/ui-ab-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-app
  template:
    metadata:
      labels:
        app: ui-app
        version: chrome
    spec:
      containers:
      - name: ui
        image: adiselv/captivate.ui:chrome
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-app
  template:
    metadata:
      labels:
        app: ui-app
        version: safari
    spec:
      containers:
      - name: ui
        image: adiselv/captivate.ui:safari
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
