deployments/ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  labels:
    app: ui-service
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 3010
    targetPort: 3000
  selector:
    app: ui-app
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment-v1
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-app
      version: v1
  template:
    metadata:
      labels:
        app: ui-app
        version: v1
    spec:
      containers:
      - name: ui
        image: adiselv/captivate.ui:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment-v2
  labels:
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-app
      version: v2
  template:
    metadata:
      labels:
        app: ui-app
        version: v2
    spec:
      containers:
      - name: ui
        image: shubhangis91/captivate-ui-v2:v2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
