deployments/ui-AB.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui-service
spec:
  hosts:
  - "*"
  gateways:
  - captivate-gateway
  http:
  - match:
    - headers:
        user-agent:
          regex: ".*Chrome.*"
    route:
    - destination:
        host: ui-service
        subset: v1
  - match:
    - headers:
        user-agent:
          regex: ".*Safari.*"
    route:
    - destination:
        host: ui-service
        subset: v2
