deployments/ui-ab-destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ui-service
spec:
  host: ui-service
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: chrome
    labels:
      version: chrome
  - name: safari
    labels:
      version: safari
