deployments/ui-vs-traffic.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui-service
spec:
  hosts:
  - "*"
  gateways:
  - captivate-gateway
  http:
  - route:
    - destination:
        host: ui-service
        subset: v1
      weight: 65
    - destination:
        host: ui-service
        subset: v2
      weight: 35
