deployments/virtual-service-ui.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui-service
spec:
  hosts:
  - ui-app
  gateways:
  - api-gateway
  http:
  - route:
    - destination:
        host: ui-app
        port:
          number: 80
        subset: v1
      weight: 10
    - destination:
        host: ui-app
        subset: v2
      weight: 90
